2004-02-10 Don Willingham <donwillingham@users.sourceforge.net> 1.4.3-cvs-b26
	* Fix a parse error caused by a missing comma (,) introduced by last revision

2004-02-10 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b25 

	* Gallery can now run embedded in GeekLog (http://www.geeklog.net)
	  - Added New Section in Step2 to set embedded type and Geeklog Path
	  - Added GeekLog classes so that Galley uses their users.

2004-02-09  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b24

	* Fixed a bug in gallery_remote2.php which caused all directories
	  to be returned to GR under some circumstances.

2004-02-06 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b23

	* Made a Workaround for strange Environments with 
	  Magic Quotes On and no or ignored .htaccess files.

	* Stripslahes in hidden config fiels.

	* Next try to get my jenskin into cvs.

2004-02-02  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b22

	* Updated copyright to 2000-2004.

2004-02-02  Don Willingham <donwillingham@users.sourceforge.net> 1.4.3-cvs-b21

	*  Allows admins to search comments by IP address, by adding IP to the
	   search string.

2004-02-02  Christian Mohn <ch-moh@online.no> 1.4.3-cvs-b20

        * Removed cmd.exe call in platform/fs_win32.php as PHP itself calls
          this when executing binaries in Win32. 
          This caused two cmd.exe processes running every time a binary 
          was called on that platform.
        
        * Added VBS as a valid executable extension in platform/fs_win32.php
          VBScript files are valid executables in Windows. :)

        * Changed the temp dir from using the system %temp% variable in
          fs_win32, to use the Gallery temp dir instead. You may not have
          allowed PHP access to %TEMP%. This could cause permissions related
          problems.


2004-02-01  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b19

	* Fixed a bug in save_photos caused by the new tabbed interface.  We