@@ -1,4 +1,10 @@
+2004-02-09  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b27
+
+	* Add additional security check to prevent geeklog integration from
+	  opening up a remote exploit
+
 2004-02-10 Don Willingham <donwillingham@users.sourceforge.net> 1.4.3-cvs-b26
+
 	* Fix a parse error caused by a missing comma (,) introduced by last revision
 
 2004-02-10 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b25 
